a1/brendan_gordon/TEST_PROGRAMS/invalidtype/maxim_gorshkov/prog1.min
# Redeclaring a variable

var x : int;
var x : string;
